--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>telka.online</h1>
+<h1>This is a premium domain name: telka.online</h1>
 <p>email: michal@mic.center</p>
 
 </body>
