--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <body>
 
-<h1>This is a premium domain name: telka.online</h1>
-<p>email: michal@mic.center</p>
+<h1>This is a premium domain name.</h1>
+<p>For more info about this domain, you can send me an email at: michal@mic.center</p>
+<p>Thank you.</p>
 
 </body>
 </html>
