--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
 
 <h1>This is a premium domain name.</h1>
-<p>For more info about this domain, you can send me an email at: michal@mic.center</p>
+<p>For more info about this domain,<br>
+you can send me an email at: michal@mic.center</p>
 <p>Thank you.</p>
 
 </body>
