--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>This is a premium domain name.</h1>
+<h1>This is a premium domain name</h1>
 <p>For more info about this domain,<br>
 you can send me an email at: michal@mic.center</p>
 <p>Thank you.</p>
