--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 
 <h1>This is a premium domain name</h1>
 <p>For more info about this domain,<br>
-you can send me an email at: michal@mic.center</p>
+you can send an email at: michal@mic.center</p>
 <p>Thank you.</p>
+
+
+<h3>If you want to send a price offer for buying this domain, you can do it by filling <a href="https://is.gd/telkaonline" target="_blank">this form.</a></h3>
 
 </body>
 </html>
