--- a/index.html
+++ b/index.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Premium Domain Name</title>
+    <style>
+        /* Basic Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* General styling */
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            padding: 20px;
+            background-color: #f8f9fa;
+            color: #333;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1em;
+            line-height: 1.5;
+            margin: 10px 0;
+        }
+
+        h3 {
+            font-size: 1.2em;
+            margin-top: 20px;
+        }
+
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive styling */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.8em;
+            }
+
+            p, h3 {
+                font-size: 1em;
+            }
+
+            body {
+                padding: 10px;
+            }
+        }
+    </style>
+</head>
 <body>
 
-<h1>This is a premium domain name</h1>
-<p>For more info about this domain,<br>
-you can send an email at: michal@mic.center</p>
-<p>&nbsp;</p>
-<h3>If you want to send a price offer for buying this domain, you can do it by filling <a href="https://is.gd/telkaonline" target="_blank">this form.</a></h3>
+    <main>
+        <h1>This is a premium domain name</h1>
+        <p>For more info about this domain,<br>
+        you can send an email at: <a href="mailto:michal@mic.center">michal@mic.center</a></p>
+        <p>&nbsp;</p>
+        <h3>If you want to send a price offer for buying this domain, you can do it by filling <a href="https://is.gd/telkaonline" target="_blank">this form.</a></h3>
+    </main>
+
 </body>
 </html>
