--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             box-sizing: border-box;
         }
 
-        /* General styling */
+        /* Futuristic background styling */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -20,30 +20,46 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            padding: 20px;
-            background-color: #f8f9fa;
-            color: #333;
+            color: #fff;
             text-align: center;
+            overflow: hidden;
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            background-size: 400% 400%;
+            animation: gradientAnimation 10s ease infinite;
+        }
+
+        /* Background animation for gradient effect */
+        @keyframes gradientAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Transparent box overlay for text */
+        main {
+            background: rgba(0, 0, 0, 0.6); /* Transparent overlay */
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            max-width: 600px;
+            width: 100%;
         }
 
         h1 {
-            font-size: 2em;
+            font-size: 2.2em;
             margin-bottom: 10px;
+            color: #00e6e6;
         }
 
-        p {
-            font-size: 1em;
-            line-height: 1.5;
+        p, h3 {
+            font-size: 1.1em;
+            line-height: 1.6;
             margin: 10px 0;
-        }
-
-        h3 {
-            font-size: 1.2em;
-            margin-top: 20px;
+            color: #b8e0e0;
         }
 
         a {
-            color: #007bff;
+            color: #00e6e6;
             text-decoration: none;
         }
 
@@ -61,8 +77,8 @@
                 font-size: 1em;
             }
 
-            body {
-                padding: 10px;
+            main {
+                padding: 15px;
             }
         }
     </style>
