--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             box-sizing: border-box;
         }
 
-        /* Futuristic background styling */
+        /* Sand-inspired background styling */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -20,12 +20,12 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            color: #fff;
+            color: #4a3621;
             text-align: center;
             overflow: hidden;
-            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            background: linear-gradient(135deg, #e8d5b5, #d0b495, #bba37b);
             background-size: 400% 400%;
-            animation: gradientAnimation 10s ease infinite;
+            animation: gradientAnimation 12s ease infinite;
         }
 
         /* Background animation for gradient effect */
@@ -37,10 +37,10 @@
 
         /* Transparent box overlay for text */
         main {
-            background: rgba(0, 0, 0, 0.6); /* Transparent overlay */
+            background: rgba(255, 248, 240, 0.8); /* Soft sand overlay */
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             max-width: 600px;
             width: 100%;
         }
@@ -48,18 +48,18 @@
         h1 {
             font-size: 2.2em;
             margin-bottom: 10px;
-            color: #00e6e6;
+            color: #8b5e3c;
         }
 
         p, h3 {
             font-size: 1.1em;
             line-height: 1.6;
             margin: 10px 0;
-            color: #b8e0e0;
+            color: #4a3621;
         }
 
         a {
-            color: #00e6e6;
+            color: #8b5e3c;
             text-decoration: none;
         }
 
