--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             color: #4a3621;
             text-align: center;
             overflow: hidden;
-            background: linear-gradient(135deg, #e8d5b5, #d0b495, #bba37b);
+            background: #000000;
             background-size: 400% 400%;
             animation: gradientAnimation 12s ease infinite;
         }
