--- a/index.html
+++ b/index.html
@@ -3,109 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Domain Name</title>
+    <title>Premium Domain</title>
     <style>
         /* Basic Reset */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: Arial, sans-serif;
         }
 
-        /* Windows 98 inspired background styling */
+        /* Centering the Card */
         body {
-            font-family: Tahoma, Arial, sans-serif;
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            margin: 0;
-            color: #000;
-            background-color: #c0c0c0;
-            text-align: center;
-            overflow: hidden;
-        }
-
-        /* Container box with retro border and shadow */
-        main {
-            background-color: #e0e0e0;
+            min-height: 100vh;
+            background-color: #f3f4f6; /* Light background inspired by the example */
+            color: #333;
             padding: 20px;
-            border: 2px solid #808080;
-            border-top: 2px solid #ffffff;
-            border-left: 2px solid #ffffff;
-            box-shadow: 4px 4px 0 #404040;
-            max-width: 600px;
+        }
+
+        /* Card container styling */
+        .card {
+            background-color: #ffffff;
+            border-radius: 10px;
+            padding: 30px;
+            max-width: 500px;
             width: 100%;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border: 1px solid #e0e0e0;
+            text-align: center;
         }
 
-        h1 {
+        /* Title */
+        .card h1 {
             font-size: 1.8em;
+            color: #333;
             margin-bottom: 15px;
-            color: #000080;
+            font-weight: bold;
         }
 
-        p, h3 {
+        /* Text */
+        .card p {
             font-size: 1em;
+            color: #666;
+            margin-bottom: 20px;
             line-height: 1.5;
-            margin: 10px 0;
-            color: #000;
         }
 
-        /* Link styling */
-        a {
-            color: #0000ee;
+        /* Email link */
+        .card a {
+            color: #0066cc;
             text-decoration: none;
-            border-bottom: 1px dotted;
+            font-weight: bold;
         }
-
-        a:hover {
-            color: #ff0000;
+        
+        .card a:hover {
             text-decoration: underline;
         }
 
-        /* Button styling */
-        .btn {
-            display: inline-block;
-            padding: 5px 10px;
-            margin-top: 20px;
+        /* Form link */
+        .card h3 {
             font-size: 1em;
-            color: #000;
-            background-color: #c0c0c0;
-            border: 2px solid #808080;
-            border-top: 2px solid #ffffff;
-            border-left: 2px solid #ffffff;
-            cursor: pointer;
+            color: #333;
+            margin-top: 20px;
+            font-weight: normal;
         }
 
-        .btn:hover {
-            background-color: #a0a0a0;
-        }
-
-        /* Responsive styling */
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 1.5em;
-            }
-
-            p, h3 {
-                font-size: 0.9em;
-            }
-
-            main {
-                padding: 15px;
+        /* Additional padding for mobile */
+        @media (max-width: 500px) {
+            .card {
+                padding: 20px;
             }
         }
     </style>
 </head>
 <body>
 
-    <main>
+    <div class="card">
         <h1>This is a premium domain name</h1>
         <p>For more info about this domain,<br>
         you can send an email at: <a href="mailto:michal@mic.center">michal@mic.center</a></p>
-        <h3>If you want to send a price offer for buying this domain, you can do it by filling <a href="https://is.gd/telkaonline" target="_blank">this form.</a></h3>
-        <button class="btn" onclick="window.location.href='https://is.gd/telkaonline'">Send Offer</button>
-    </main>
+        <h3>If you want to send a price offer for buying this domain, you can do it by filling <a href="https://is.gd/telkaonline" target="_blank">this form</a>.</h3>
+    </div>
 
 </body>
 </html>
