--- a/index.html
+++ b/index.html
@@ -2,91 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Domain</title>
-    <style>
-        /* Basic Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
-        /* Centering the Card */
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background-color: #f3f4f6; /* Light background inspired by the example */
-            color: #333;
-            padding: 20px;
-        }
-
-        /* Card container styling */
-        .card {
-            background-color: #ffffff;
-            border-radius: 10px;
-            padding: 30px;
-            max-width: 500px;
-            width: 100%;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            border: 1px solid #e0e0e0;
-            text-align: center;
-        }
-
-        /* Title */
-        .card h1 {
-            font-size: 1.8em;
-            color: #333;
-            margin-bottom: 15px;
-            font-weight: bold;
-        }
-
-        /* Text */
-        .card p {
-            font-size: 1em;
-            color: #666;
-            margin-bottom: 20px;
-            line-height: 1.5;
-        }
-
-        /* Email link */
-        .card a {
-            color: #0066cc;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        
-        .card a:hover {
-            text-decoration: underline;
-        }
-
-        /* Form link */
-        .card h3 {
-            font-size: 1em;
-            color: #333;
-            margin-top: 20px;
-            font-weight: normal;
-        }
-
-        /* Additional padding for mobile */
-        @media (max-width: 500px) {
-            .card {
-                padding: 20px;
-            }
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; URL='https://www.namecheap.com/market/buynow/telka.online/'">
+    <title>Redirecting...</title>
 </head>
 <body>
-
-    <div class="card">
-        <h1>This is a premium domain name</h1>
-        <p>For more info about this domain,<br>
-        you can send an email at: <a href="mailto:michal@mic.center">michal@mic.center</a></p>
-        <h3>If you want to send a price offer for buying this domain, you can do it by filling <a href="https://is.gd/telkaonline" target="_blank">this form</a>.</h3>
-    </div>
-
+    <p>If you are not redirected, <a href="https://www.namecheap.com/market/buynow/telka.online/">click here</a>.</p>
 </body>
 </html>
